fixed UnsupportedOperationException